--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     href="https://eds-static.equinor.com/font/equinor-font.css"
     />
     
-    <title>ProX | POC</title>
+    <title>Fusion | Johan Castberg | Pilot</title>
 </head>
 <body>
     <span id="root"></span>
