--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     rel="stylesheet"
     href="https://eds-static.equinor.com/font/equinor-font.css"
     />
+    <script type="module" src="/src/index.tsx"></script>
     
     <title>Fusion | Johan Castberg | Pilot</title>
 </head>
