Home Pahe First Draft

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     href="https://eds-static.equinor.com/font/equinor-font.css"
     />
     <script type="module" src="/src/index.tsx"></script>
-    
+    <base href="/">
     <title>Fusion | Johan Castberg | Pilot</title>
 </head>
 <body>
